@@ -7,20 +7,17 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import ru.alxstn.tastycoffeebulkpurchase.configuration.TastyCoffeeConfigProperties;
-import ru.alxstn.tastycoffeebulkpurchase.entity.Customer;
-import ru.alxstn.tastycoffeebulkpurchase.entity.Product;
-import ru.alxstn.tastycoffeebulkpurchase.entity.Purchase;
-import ru.alxstn.tastycoffeebulkpurchase.entity.Session;
+import ru.alxstn.tastycoffeebulkpurchase.entity.*;
 
+import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -55,29 +52,49 @@ class TastyCoffeePageTest {
     }
 
     @Test
+    void shouldCorrectlyAddBerryToPurchaseList() {
+        Product berry = new Product("Бэрри", new BigDecimal(1),
+                "",
+                new ProductPackage("Упаковка 250 г"),
+                "КОФЕ ДЛЯ МОЛОЧНЫХ НАПИТКОВ",
+                "Смеси для молочных напитков",
+                true);
+
+        PurchaseEntry berryPurchase = new PurchaseEntry(berry, "", 10);
+        PurchaseEntry secondBerryPurchase = new PurchaseEntry(berry, "", 1);
+
+        List<PurchaseEntry> purchases = new ArrayList<>();
+        purchases.add(berryPurchase);
+        purchases.add(secondBerryPurchase);
+
+        Assertions.assertDoesNotThrow(() -> {
+            List<PurchaseEntry> leftovers = webPage.placeOrder(purchases);
+            assertEquals(0, leftovers.size());
+        });
+    }
+
+    @Disabled
+    @Test
     void shouldCorrectlyObtainPriceListAndPlaceOrder() {
         // All functionality combined in one test because of parser high time-consuming behavior
         Assertions.assertDoesNotThrow(() -> {
             logger.info("Now Obtaining PriceList");
             List<Product> obtainedPriceList = webPage.buildPriceList();
 
-            Customer c = new Customer();
-            Session s = new Session();
-
-            List<Purchase> purchases = obtainedPriceList.stream()
-                    .map(product -> new Purchase(
-                            c, product, s, product.isGrindable() ? "Мелкий" : "", 1))
+            List<PurchaseEntry> purchases = obtainedPriceList.stream()
+                    .map(product -> new PurchaseEntry(
+                            product, product.isGrindable() ? "Мелкий" : "", 5))
                     .collect(Collectors.toList());
 
-            List<Purchase> beansPurchases = obtainedPriceList.stream()
+            List<PurchaseEntry> beansPurchases = obtainedPriceList.stream()
                     .filter(Product::isGrindable)
-                    .map(product -> new Purchase(
-                            c, product, s, "", 1))
-                    .collect(Collectors.toList());
+                    .map(product -> new PurchaseEntry(
+                            product, "", 5))
+                    .toList();
 
             purchases.addAll(beansPurchases);
             logger.info("Now Building Order");
-            List<Purchase> leftovers = webPage.placeOrder(purchases);
+            List<PurchaseEntry> leftovers = webPage.placeOrder(purchases);
             assertTrue(obtainedPriceList.size() > 0);
             assertEquals(0, leftovers.size());
         });
